Fix flex layout issue on form controls in IE11

--- a/components/com_jce/editor/libraries/css/src/override.css
+++ b/components/com_jce/editor/libraries/css/src/override.css
@@ -24,6 +24,11 @@ html {
     align-items: center;
 }
 
+/* Fix IE11 flex issues */
+.uk-form-horizontal .uk-form-controls {
+    -ms-flex: auto;
+}
+
 .uk-form-horizontal .uk-grid > .uk-form-label {
     line-height: 1.25;
 }
@@ -568,7 +573,6 @@ input[type="range"]::-ms-thumb {
         display: none !important;
     }
 }*/
-
 
 /* fix layout in upload dialog */
 
